# bookshelf

./: .gitignore  .readthedocs.yml  .spyglassrc.json  README.md  build.py  pyproject.toml
.github/workflows/: meta.yml  metadata.yml  prerelease.yml  publish.yml  pypi-publish.yml  release.yml  review.yml
bookshelf/: __init__.py  definitions.py  helpers.py
bookshelf/cli/: modules.py
bookshelf/commands/: docs.py
bookshelf/meta/: feature.py  module.py
bookshelf/packtest/: __init__.py
bookshelf/plugins/: gen_load.py  load_tests.py  release_pack.py  setup_pack.py
core/: definitions.py
core/cli/: meta.py  modules.py
core/common/: helpers.py  metadata.py  packtest.py
core/plugins/: gen_help.py  gen_load.py  log_build.py  release_pack.py  setup_pack.py
data/: manifest.json  versions.json
docs/: CHANGELOG.md  conf.py  examples.md  faq.md  index.md  modules.md  quickstart.md  related.md
docs/_static/: bookshelf.css  switcher.json
docs/_templates/: featured-modules.md
docs/changelog/: v3.0.0.md  v3.0.1.md  v3.0.2.md  v3.1.0.md  v3.2.0.md  v4.0.0.md  v4.0.1.md  v4.1.0.md
docs/contribute/: cli-reference.md  commit-guidelines.md  debug-tools.md  debug.md  generated-files.md  getting-started.md  index.md  metadata.md  shared-resources.md  special-functions.md  special-thanks.md  tree-structure.md
docs/examples/: index.md  paintbrush.md
docs/modules/: animation.md  block.md  collection.md  dump.md  environment.md  generate.md  generation.md  hitbox.md  index.md  move.md  random.md  raycast.md  sidebar.md  spline.md  string.md  view.md
examples/: lifestring.md  paintbrush.md
meta/: manifest.json  versions.json
modules/: config.json
modules/@dev/: README.md  module.json
modules/@essentials/: README.md  module.json
modules/@lib/: README.md  module.json
modules/@prefabs/: README.md  module.json
modules/@runtime/: README.md  module.json
modules/@sdk/: README.md  module.json
(+1330 files in other folders)
