[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcbookshelf"
dynamic = ["version"]
description = "Scripts for Bookshelf and the GitHub pipeline."
authors = [{ name = "Bookshelf Contributors", email = "contact@gunivers.net" }]
license = { text = "MPL-2.0" }
requires-python = ">=3.14"
dependencies = [
  "beet>=0.115.0",
  "frozendict>=2.4.7",
  "httpx[http2]>=0.28.1",
  "orjson>=3.11.7",
  "pydantic>=2.12.5",
  "semver>=3.0.4",
]

[project.scripts]
check = "bookshelf.commands.project:check"
update = "bookshelf.commands.project:update"
link = "bookshelf.commands.project:link"
docs = "bookshelf.commands.docs:docs"
build = "bookshelf.commands.modules:build"
watch = "bookshelf.commands.modules:watch"
modules = "bookshelf.commands.modules:modules"
examples = "bookshelf.commands.examples:examples"

[dependency-groups]
dev = [
  "click>=8.4.1",
  "lectern>=0.35.0",
  "platformdirs>=4.10.0",
  "rich>=15.0.0",
  "watchfiles>=1.2.0",
]
docs = [
  "linkify-it-py>=2.1.0",
  "myst-parser>=5.1.0",
  "sphinx-autobuild>=2025.8.25",
  "sphinx-breeze-theme>=0.13.2",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.7.0",
  "sphinx-intl>=2.3.2",
  "sphinx-minecraft>=1.0.5",
  "sphinx>=9.1.0",
  "sphinxcontrib.mermaid>=1.0.0",
]

[tool.hatch.version]
path = "src/bookshelf/definitions.py"

[tool.hatch.build.targets.sdist]
only-include = ["src/bookshelf", "modules", "examples"]

[tool.hatch.build.targets.wheel]
packages = ["src/bookshelf"]

[tool.hatch.build.targets.wheel.force-include]
modules = "bookshelf/data/modules"
examples = "bookshelf/data/examples"

[tool.uv]
package = true
default-groups = "all"

[tool.mypy]
files = ["src", "modules"]

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
  "D100",
  "D203",
  "D213",
  "INP001",
  "S603",
  "TRY400",
  "UP017",
]
